--- a/app/src/main/res/layout/activity_ichoice.xml
+++ b/app/src/main/res/layout/activity_ichoice.xml
@@ -7,6 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="1"
+    android:keepScreenOn="true"
     tools:context="my.com.taruc.fitnesscompanion.UI.IChoiceActivity">
 
     <TextView
