--- a/app/src/main/res/layout/row_ranking.xml
+++ b/app/src/main/res/layout/row_ranking.xml
@@ -25,24 +25,25 @@
             android:layout_width="140dp"
             android:layout_height="40dp"
             android:text="Tan Sai Boon"
-            android:layout_marginLeft="60dp"
+            android:layout_marginLeft="38dp"
+            android:layout_marginStart="38dp"
+            android:ellipsize="end"
+            android:textColor="@android:color/white"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/tv_ranking"
-            android:layout_marginStart="60dp"
-            android:ellipsize="end"
-            android:textColor="@android:color/white" />
+            android:layout_toEndOf="@+id/tv_ranking" />
 
         <TextView
             android:id="@+id/tv_point"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="20dp"
-            android:layout_marginEnd="20dp"
             android:text="1000 Points"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/tv_name"
+            android:layout_toEndOf="@+id/tv_name"
+            android:layout_marginLeft="34dp"
+            android:layout_marginStart="34dp" />
 
         <Button
             android:id="@+id/challenge"
