--- a/app/src/main/res/layout-large/row_ranking.xml
+++ b/app/src/main/res/layout-large/row_ranking.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    >
+    android:background="@color/MainBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,14 +22,13 @@
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="140dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Tan Sai Boon"
             android:layout_marginLeft="38dp"
             android:layout_marginStart="38dp"
             android:ellipsize="end"
             android:textColor="@android:color/white"
-            android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/tv_ranking"
             android:layout_toEndOf="@+id/tv_ranking" />
 
@@ -39,11 +38,8 @@
             android:layout_height="wrap_content"
             android:text="1000 Points"
             android:textColor="@android:color/white"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/tv_name"
-            android:layout_toEndOf="@+id/tv_name"
-            android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp" />
+            android:layout_alignLeft="@+id/tv_name"
+            android:layout_below="@+id/tv_name" />
 
         <Button
             android:id="@+id/challenge"
@@ -51,10 +47,9 @@
             android:layout_height="wrap_content"
             android:text="Challenge"
             android:textSize="12dp"
-            android:layout_below="@+id/tv_point"
-            android:layout_alignLeft="@+id/tv_point"
-            android:layout_alignStart="@+id/tv_point"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_ranking" />
     </RelativeLayout>
 
     <View
