--- a/app/src/main/res/layout-small/app_bar.xml
+++ b/app/src/main/res/layout-small/app_bar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="@dimen/app_bar_top_padding"
     android:layout_width="match_parent"
-    android:layout_height="20dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/color_rainbow"
     app:theme="@style/MyCustomToolBarTheme"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
