--- a/app/src/main/res/layout-small/row_ranking.xml
+++ b/app/src/main/res/layout-small/row_ranking.xml
@@ -18,12 +18,13 @@
             android:text="No 1"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:textSize="8dp" />
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Tan Sai Boon"
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
@@ -31,7 +32,8 @@
             android:textColor="@android:color/white"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/tv_ranking"
-            android:layout_toEndOf="@+id/tv_ranking" />
+            android:layout_toEndOf="@+id/tv_ranking"
+            android:textSize="8dp" />
 
         <TextView
             android:id="@+id/tv_point"
@@ -39,22 +41,19 @@
             android:layout_height="wrap_content"
             android:text="1000 Points"
             android:textColor="@android:color/white"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/tv_name"
-            android:layout_toEndOf="@+id/tv_name"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp" />
+            android:layout_below="@+id/tv_name"
+            android:layout_alignLeft="@+id/tv_name"
+            android:textSize="8dp" />
 
         <Button
             android:id="@+id/challenge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:text="Challenge"
-            android:textSize="12dp"
-            android:layout_below="@+id/tv_point"
-            android:layout_alignLeft="@+id/tv_point"
-            android:layout_alignStart="@+id/tv_point"
-            android:textColor="@android:color/white" />
+            android:textSize="8dp"
+            android:textColor="@android:color/white"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_ranking" />
     </RelativeLayout>
 
     <View
