--- a/app/src/main/res/layout/activity_add_goal.xml
+++ b/app/src/main/res/layout/activity_add_goal.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
+        android:maxLength="3"
         android:id="@+id/inputGoalDuration"
         android:hint="Target DAY(s)" />
 
