--- a/app/src/main/res/layout/row_ranking.xml
+++ b/app/src/main/res/layout/row_ranking.xml
@@ -3,35 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    >
+    android:background="@color/MainBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:paddingBottom="5dp"
-        >
+        android:paddingBottom="5dp">
+
         <TextView
             android:id="@+id/tv_ranking"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No 1"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
+            android:text="No 1"
             android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="140dp"
-            android:layout_height="40dp"
-            android:text="Tan Sai Boon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="38dp"
             android:layout_marginStart="38dp"
-            android:ellipsize="end"
-            android:textColor="@android:color/white"
-            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/tv_ranking"
             android:layout_toRightOf="@+id/tv_ranking"
-            android:layout_toEndOf="@+id/tv_ranking" />
+            android:ellipsize="end"
+            android:text="Tan Sai Boon"
+            android:textColor="@android:color/white"
+            android:layout_alignTop="@+id/tv_ranking" />
 
         <TextView
             android:id="@+id/tv_point"
@@ -39,29 +40,25 @@
             android:layout_height="wrap_content"
             android:text="1000 Points"
             android:textColor="@android:color/white"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/tv_name"
-            android:layout_toEndOf="@+id/tv_name"
-            android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp" />
+            android:layout_below="@+id/tv_name"
+            android:layout_alignLeft="@+id/tv_name" />
 
         <Button
             android:id="@+id/challenge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Challenge"
+            android:textColor="@android:color/white"
             android:textSize="12dp"
-            android:layout_below="@+id/tv_point"
-            android:layout_alignLeft="@+id/tv_point"
-            android:layout_alignStart="@+id/tv_point"
-            android:textColor="@android:color/white" />
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dp"
+            android:layout_alignTop="@+id/tv_ranking" />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/black"
         android:layout_below="@+id/tv_point"
-        />
+        android:background="@android:color/black" />
 
 </LinearLayout>
