--- a/app/src/main/res/layout-small/activity_sleep_data_graph_view.xml
+++ b/app/src/main/res/layout-small/activity_sleep_data_graph_view.xml
@@ -70,7 +70,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sleep Quality:"
+            android:text="@string/sleepQuality"
             android:layout_below="@+id/graph"
             android:id="@+id/SleepQualityCaption"
             android:textColor="@android:color/white"
@@ -80,7 +80,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="--"
+            android:text="@string/empty"
             android:layout_below="@+id/graph"
             android:id="@+id/SleepQualityValue"
             android:textColor="@android:color/white"
@@ -106,7 +106,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total Sleep Time "
+                    android:text="@string/totalSleepTime"
                     android:id="@+id/TotalSleepTimeCaption"
                     android:layout_column="0"
                     android:textSize="10dp"
@@ -139,7 +139,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Asleep Time "
+                    android:text="@string/asleepTime"
                     android:id="@+id/AsleepTimeCaption"
                     android:layout_column="0"
                     android:textSize="10dp"
@@ -172,7 +172,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Times Awaken "
+                    android:text="@string/timeAwake"
                     android:id="@+id/TimesAwakenCaption"
                     android:layout_column="0"
                     android:textSize="10dp"
@@ -203,7 +203,7 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="20dp"
-            android:text="Change View"
+            android:text="@string/changeView"
             android:id="@+id/textViewChangeView"
             android:gravity="center"
             android:background="@android:color/background_light"
