--- a/app/src/main/res/layout-xlarge/activity_login_page.xml
+++ b/app/src/main/res/layout-xlarge/activity_login_page.xml
@@ -54,7 +54,7 @@
                     android:id="@+id/etEmail"
                     android:layout_width="600dp"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
+                    android:hint="@string/emailHint"
                     android:textColorHint="#ffe3e3e3"
                     android:layout_column="1"
                     android:layout_marginLeft="10dp"
@@ -73,7 +73,7 @@
                     android:id="@+id/etPassword"
                     android:layout_width="600dp"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="@string/passwordHint"
                     android:textColorHint="#ffe3e3e3"
                     android:inputType="textPassword"
                     android:layout_column="1"
@@ -96,7 +96,7 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign In"
+                android:text="@string/signIn"
                 android:layout_marginRight="30dp"
                 android:background="#ff6e779f"
                 android:textColor="@android:color/white"
