--- a/app/src/main/res/layout/activity_exercise_menu.xml
+++ b/app/src/main/res/layout/activity_exercise_menu.xml
@@ -38,7 +38,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Warm Up For 5-15 minutes"
+        android:text="@string/warmUp"
         android:layout_below="@+id/chronometerTimer"
         android:layout_centerHorizontal="true"
         android:textSize="20dp"
@@ -57,7 +57,7 @@
         android:shadowColor="@android:color/transparent"
         style="@android:style/Widget.Holo.Button.Borderless"
         android:onClick="buttonStart"
-        android:text="Start"
+        android:text="@string/start"
         android:textSize="27dp"
         android:textColor="@android:color/white"
         android:layout_marginTop="10dp" />
@@ -122,7 +122,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Target : "
+                android:text="@string/target"
                 android:id="@+id/textViewDistanceTargetCaption"
                 android:textSize="20dp"
                 android:textColor="@android:color/holo_blue_bright"
@@ -145,7 +145,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Plan Type : "
+        android:text="@string/planType"
         android:id="@+id/textViewTypeLabel"
         android:textColor="@android:color/white"
         android:textSize="15dp"
@@ -157,7 +157,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calories Burn/Min :"
+        android:text="@string/caloriesBurnMin"
         android:id="@+id/textViewCaloriesLabel"
         android:textColor="@android:color/white"
         android:textSize="15dp"
@@ -167,7 +167,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Best Duration :"
+        android:text="@string/bestDuration"
         android:id="@+id/textViewDurationLabel"
         android:textColor="@android:color/white"
         android:textSize="15dp"
@@ -178,7 +178,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Max HR :"
+        android:text="@string/maxHR"
         android:id="@+id/textViewMaxHRLabel"
         android:textColor="@android:color/white"
         android:textSize="15dp"
@@ -231,7 +231,7 @@
         android:textSize="15dp"
         android:layout_below="@+id/textViewMaxHR"
         android:textColor="@android:color/holo_green_light"
-        android:text="Bring your phone to keep track distance."
+        android:text="@string/exerciseRemark"
         android:id="@+id/textViewRemark"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
