--- a/app/src/main/res/layout-large/activity_main_menu_appbar_3.xml
+++ b/app/src/main/res/layout-large/activity_main_menu_appbar_3.xml
@@ -35,7 +35,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/StepNumberTitle"
-                    android:text="Step Number : "
+                    android:text="@string/stepNumber"
                     android:textSize="20dp"
                     android:textColor="@color/white"
                     android:layout_alignParentBottom="false"
@@ -119,7 +119,7 @@
                                 android:layout_column="0"
                                 android:layout_width="110dp"
                                 android:layout_height="wrap_content"
-                                android:text="Goal"
+                                android:text="@string/goal"
                                 android:textColor="@android:color/white"
                                 android:textSize="20dp"
                                 android:layout_below="@+id/imageViewGoal"
@@ -131,7 +131,7 @@
                                 android:layout_column="1"
                                 android:layout_width="110dp"
                                 android:layout_height="wrap_content"
-                                android:text="Schedule"
+                                android:text="@string/schedule"
                                 android:textColor="@android:color/white"
                                 android:textSize="20dp"
                                 android:layout_gravity="center"
@@ -167,7 +167,7 @@
                                 android:layout_column="0"
                                 android:layout_width="110dp"
                                 android:layout_height="wrap_content"
-                                android:text="Achievement"
+                                android:text="@string/achievement"
                                 android:textColor="@android:color/white"
                                 android:textSize="20dp"
                                 android:layout_gravity="center"
@@ -179,7 +179,7 @@
                                 android:layout_column="1"
                                 android:layout_width="110dp"
                                 android:layout_height="wrap_content"
-                                android:text="Profile"
+                                android:text="@string/profile"
                                 android:textColor="@android:color/white"
                                 android:textSize="20dp"
                                 android:id="@+id/ProfileTitle"
