--- a/app/src/main/res/layout-normal/activity_goal_page.xml
+++ b/app/src/main/res/layout-normal/activity_goal_page.xml
@@ -209,7 +209,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No Goal Created"
+            android:text="@string/noGoal"
             android:id="@+id/textViewNoGoal"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
