--- a/app/src/main/res/layout-small/activity_record_graph_view.xml
+++ b/app/src/main/res/layout-small/activity_record_graph_view.xml
@@ -83,7 +83,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Activity "
+                android:text="@string/activity"
                 android:id="@+id/ActivityTxtView"
                 android:layout_column="0"
                 android:textSize="8dp"
@@ -116,7 +116,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Start Time "
+                android:text="@string/startTime"
                 android:id="@+id/StartTimeTxtView"
                 android:layout_column="0"
                 android:textSize="8dp"
@@ -149,7 +149,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="End Time "
+                android:text="@string/endTime"
                 android:id="@+id/EndTimeTxtView"
                 android:layout_column="0"
                 android:textSize="8dp"
@@ -182,7 +182,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Duration "
+                android:text="@string/duration"
                 android:id="@+id/DurationTxtView"
                 android:layout_column="0"
                 android:textSize="8dp"
@@ -215,7 +215,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Step Number "
+                android:text="@string/stepNumber"
                 android:id="@+id/StepTxtView"
                 android:layout_column="0"
                 android:textSize="8dp"
@@ -248,7 +248,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Calories "
+                android:text="@string/calories"
                 android:id="@+id/CaloriesTxtView"
                 android:layout_column="0"
                 android:textSize="8dp"
@@ -281,7 +281,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Distance "
+                android:text="@string/distance"
                 android:id="@+id/DistanceTxtView"
                 android:layout_column="0"
                 android:textSize="8dp"
@@ -314,7 +314,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Average\nHeart Rate "
+                android:text="@string/AveHR"
                 android:id="@+id/AveHRTxtView"
                 android:layout_column="0"
                 android:textSize="8dp"
@@ -344,7 +344,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Change View"
+        android:text="@string/changeView"
         android:id="@+id/textViewChangeView"
         android:layout_below="@+id/TableDetail"
         android:layout_centerHorizontal="true"
