--- a/app/src/main/res/layout-small/activity_schedule_page.xml
+++ b/app/src/main/res/layout-small/activity_schedule_page.xml
@@ -10,7 +10,7 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="20dp"
-        android:text="Add New Reminder"
+        android:text="@string/addSchedule"
         android:id="@+id/buttonNew"
         android:layout_centerHorizontal="true"
         android:onClick="GoScheduleNew"
