--- a/app/src/main/res/layout-small/activity_schedule_page_new.xml
+++ b/app/src/main/res/layout-small/activity_schedule_page_new.xml
@@ -25,7 +25,7 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="30dp"
-        android:text="Add New Reminder"
+        android:text="@string/addSchedule"
         android:id="@+id/buttonAddReminder"
         android:layout_alignParentBottom="false"
         android:layout_alignParentRight="true"
