--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageViewLogo"
             android:layout_centerHorizontal="true"
-            android:text="Fitness Companion"
+            android:text="@string/app_name"
             android:textColor="@android:color/white"
             android:textSize="20dp" />
 
@@ -53,7 +53,7 @@
                     android:id="@+id/etEmail"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:hint="Email"
+                    android:hint="@string/emailHint"
                     android:textColorHint="#ffe3e3e3"
                     android:layout_column="1"
                     android:layout_marginLeft="10dp"
@@ -70,7 +70,7 @@
                     android:id="@+id/etPassword"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
+                    android:hint="@string/passwordHint"
                     android:textColorHint="#ffe3e3e3"
                     android:inputType="textPassword"
                     android:layout_column="1"
@@ -92,7 +92,7 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign In"
+                android:text="@string/signIn"
                 android:layout_marginRight="30dp"
                 android:background="#ff6e779f"
                 android:textColor="@android:color/white"
