--- a/app/src/main/res/layout-small/activity_health_profile_page.xml
+++ b/app/src/main/res/layout-small/activity_health_profile_page.xml
@@ -58,7 +58,7 @@
             android:layout_below="@+id/healthDetailTitle"
             android:id="@+id/healthDetailTable"
             android:background="#ff6e779f"
-            android:paddingLeft="10dp">
+            android:paddingLeft="4dp">
             <TableRow android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
@@ -213,7 +213,7 @@
             android:layout_below="@+id/bodyGirthTitle"
             android:id="@+id/bodyGirthTable"
             android:background="#ff6e779f"
-            android:paddingLeft="10dp">
+            android:paddingLeft="4dp">
             <TableRow>
                 <TextView
                     android:id="@+id/textView14"
@@ -230,7 +230,8 @@
                     android:textStyle="bold"
                     android:layout_column="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp" />
                 <EditText
                     android:id="@+id/editTextArm"
                     android:layout_width="wrap_content"
@@ -267,7 +268,8 @@
                     android:textStyle="bold"
                     android:layout_column="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp" />
                 <EditText
                     android:id="@+id/editTextChest"
                     android:layout_width="wrap_content"
@@ -304,7 +306,8 @@
                     android:textStyle="bold"
                     android:layout_column="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp" />
                 <EditText
                     android:id="@+id/editTextCalf"
                     android:layout_width="wrap_content"
@@ -341,7 +344,8 @@
                     android:textStyle="bold"
                     android:layout_column="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp" />
                 <EditText
                     android:id="@+id/editTextThigh"
                     android:layout_width="wrap_content"
@@ -379,7 +383,8 @@
                     android:textStyle="bold"
                     android:layout_column="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp" />
                 <EditText
                     android:id="@+id/editTextWaist"
                     android:layout_width="wrap_content"
@@ -416,7 +421,8 @@
                     android:textStyle="bold"
                     android:layout_column="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp" />
                 <EditText
                     android:id="@+id/editTextHip"
                     android:layout_width="wrap_content"
@@ -466,7 +472,7 @@
             android:layout_below="@+id/resultTitle"
             android:id="@+id/healthResultTable"
             android:background="#ff6e779f"
-            android:padding="10dp">
+            android:padding="4dp">
             <TableRow android:paddingBottom="5dp">
                 <TextView
                     android:id="@+id/textView19"
@@ -491,7 +497,8 @@
                     android:text="New Text"
                     android:textColor="@android:color/white"
                     android:layout_column="2"
-                    android:textSize="10dp" />
+                    android:textSize="10dp"
+                    android:layout_gravity="right" />
             </TableRow>
             <TableRow android:paddingBottom="5dp">
                 <TextView
@@ -517,7 +524,8 @@
                     android:text="New Text"
                     android:textColor="@android:color/white"
                     android:layout_column="2"
-                    android:textSize="10dp" />
+                    android:textSize="10dp"
+                    android:layout_gravity="right" />
             </TableRow>
             <TableRow android:paddingBottom="5dp">
                 <TextView
@@ -543,7 +551,8 @@
                     android:text="New Text"
                     android:textColor="@android:color/white"
                     android:layout_column="2"
-                    android:textSize="10dp" />
+                    android:textSize="10dp"
+                    android:layout_gravity="right" />
             </TableRow>
         </TableLayout>
 
