--- a/app/src/main/res/layout/activity_health_profile_page.xml
+++ b/app/src/main/res/layout/activity_health_profile_page.xml
@@ -69,14 +69,14 @@
                     android:text="@string/weight"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:layout_margin="1dp" />
+                    android:layout_margin="1dp"
+                    android:layout_column="0" />
                 <TextView
                     android:text=":"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
                     android:layout_column="1" />
                 <EditText
                     android:id="@+id/editTextWeight"
@@ -245,10 +245,8 @@
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="0dp"
-                    android:layout_column="1"
-                    android:padding="0dp" />
+                    android:paddingLeft="50dp"
+                    android:layout_column="1" />
                 <EditText
                     android:id="@+id/editTextArm"
                     android:layout_width="110dp"
@@ -286,10 +284,8 @@
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="0dp"
-                    android:layout_column="1"
-                    android:padding="0dp" />
+                    android:paddingLeft="50dp"
+                    android:layout_column="1" />
                 <EditText
                     android:id="@+id/editTextChest"
                     android:layout_width="110dp"
@@ -327,10 +323,8 @@
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="0dp"
-                    android:layout_column="1"
-                    android:padding="0dp" />
+                    android:paddingLeft="50dp"
+                    android:layout_column="1" />
                 <EditText
                     android:id="@+id/editTextCalf"
                     android:layout_width="110dp"
@@ -368,10 +362,8 @@
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="0dp"
-                    android:layout_column="1"
-                    android:padding="0dp" />
+                    android:paddingLeft="50dp"
+                    android:layout_column="1" />
                 <EditText
                     android:id="@+id/editTextThigh"
                     android:layout_width="110dp"
@@ -398,11 +390,10 @@
                     android:id="@+id/tv_waist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Waist"
+                    android:text="@string/waist"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
                     android:layout_column="0"
-                    android:maxLength="3"
                     android:layout_margin="1dp" />
                 <TextView
                     android:text=":"
@@ -410,10 +401,8 @@
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="0dp"
-                    android:layout_column="1"
-                    android:padding="0dp" />
+                    android:paddingLeft="50dp"
+                    android:layout_column="1" />
                 <EditText
                     android:id="@+id/editTextWaist"
                     android:layout_width="110dp"
@@ -440,7 +429,7 @@
                     android:id="@+id/tv_Hip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hip"
+                    android:text="@string/hip"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
                     android:layout_column="0"
@@ -451,10 +440,8 @@
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:layout_margin="1dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="0dp"
-                    android:layout_column="1"
-                    android:padding="0dp" />
+                    android:paddingLeft="50dp"
+                    android:layout_column="1" />
                 <EditText
                     android:id="@+id/editTextHip"
                     android:layout_width="110dp"
@@ -536,10 +523,9 @@
                     android:text="New Text"
                     android:textColor="@android:color/white"
                     android:layout_column="2"
-                    android:padding="0dp"
-                    android:paddingRight="0dp"
                     android:textSize="15dp"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="right" />
             </TableRow>
             <TableRow>
                 <TextView
@@ -568,10 +554,9 @@
                     android:text="New Text"
                     android:textColor="@android:color/white"
                     android:layout_column="2"
-                    android:padding="0dp"
-                    android:paddingRight="0dp"
                     android:textSize="15dp"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="right" />
             </TableRow>
             <TableRow>
                 <TextView
@@ -600,10 +585,9 @@
                     android:text="New Text"
                     android:textColor="@android:color/white"
                     android:layout_column="2"
-                    android:padding="0dp"
-                    android:paddingRight="0dp"
                     android:textSize="15dp"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="right" />
             </TableRow>
         </TableLayout>
 
