--- a/app/src/main/res/layout-normal/activity_schedule_page_new.xml
+++ b/app/src/main/res/layout-normal/activity_schedule_page_new.xml
@@ -34,7 +34,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:textColor="@color/FontColor"
+        android:textColor="@color/ButtonFont"
         android:onClick="addNewReminder"
         android:background="@color/ButtonColor"
         android:textSize="@dimen/fontSize" />
