--- a/app/src/main/res/layout-small/activity_schedule_page.xml
+++ b/app/src/main/res/layout-small/activity_schedule_page.xml
@@ -14,7 +14,7 @@
         android:id="@+id/buttonNew"
         android:layout_centerHorizontal="true"
         android:onClick="GoScheduleNew"
-        android:textColor="@color/FontColor"
+        android:textColor="@color/ButtonFont"
         android:layout_below="@+id/titleBar"
         android:background="@color/ButtonColor"
         android:layout_margin="5dp"
