--- a/app/src/main/res/layout-small/activity_schedule_page_new.xml
+++ b/app/src/main/res/layout-small/activity_schedule_page_new.xml
@@ -32,7 +32,7 @@
         android:layout_alignParentEnd="false"
         android:layout_below="@+id/list"
         android:layout_marginTop="5dp"
-        android:textColor="@color/FontColor"
+        android:textColor="@color/ButtonFont"
         android:onClick="addNewReminder"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
