--- a/app/src/main/res/layout-xlarge/activity_schedule_page.xml
+++ b/app/src/main/res/layout-xlarge/activity_schedule_page.xml
@@ -17,7 +17,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="35dp"
-        android:textColor="@color/FontColor"
+        android:textColor="@color/ButtonFont"
         android:layout_below="@+id/titleBar"
         android:background="@color/ButtonColor"
         android:layout_marginTop="35dp"
