--- a/app/src/main/res/layout-small/activity_health_profile_page.xml
+++ b/app/src/main/res/layout-small/activity_health_profile_page.xml
@@ -371,11 +371,10 @@
                     android:id="@+id/tv_waist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Waist"
+                    android:text="@string/waist"
                     android:textColor="@color/FontColor"
                     android:textSize="@dimen/fontSizeSmall"
-                    android:layout_column="0"
-                    android:maxLength="3" />
+                    android:layout_column="0" />
                 <TextView
                     android:text=":"
                     android:textColor="@color/FontColor"
@@ -410,7 +409,7 @@
                     android:id="@+id/tv_Hip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hip"
+                    android:text="@string/hip"
                     android:textColor="@color/FontColor"
                     android:textSize="@dimen/fontSizeSmall"
                     android:layout_column="0" />
