--- a/app/src/main/res/layout-xlarge/activity_login_page.xml
+++ b/app/src/main/res/layout-xlarge/activity_login_page.xml
@@ -16,12 +16,12 @@
 
         <ImageView
             android:id="@+id/imageViewLogo"
-            android:layout_width="350dp"
+            android:layout_width="400dp"
             android:layout_height="400dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:contentDescription="logo"
-            android:src="@drawable/fitness_run_icon"
+            android:src="@drawable/logo_drawer"
             android:layout_margin="20dp" />
 
         <TextView
